Corrected element spacing

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
 }
 
 header{
-    top: 0;
+    position: relative;
     width: 100%;
 }
 
@@ -13,9 +13,6 @@ header{
     margin-bottom:30px; 
 }
 
-img{
-    padding-top: 120;
-}
 
 .centre{
     display:block;
@@ -38,12 +35,12 @@ img{
 
 .left{
     float: left;
-    padding-left: 16px;;
+    padding-left: 18px;;
 }
 
 .right{
     float: right;
-    padding-right: 16px;
+    padding-right: 18px;
 }
 
 input[type=text]{
